[tool.poetry]
name = "cars-api"
version = "1.0.0"
description = ""
authors = ["Guilherme Arthur de Carvalho <gui.ifsp11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
